// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should work when a test changes and makes the results better 1`] = `
Array [
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"no raw console calls\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"no raw console calls\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked for the first time! 🎉",
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"no raw console calls\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"no raw console calls\\" got better! 😍",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  succ  ✅  - ",
  "1 test got better! 😍",
]
`;

exports[`betterer should work when a test changes and makes the results better 2`] = `
"// BETTERER RESULTS V1.
exports[\`no raw console calls\`] = {
  timestamp: 0,
  value: \`{
    \\"src/index.ts:913095150\\": [
      [0, 0, 11, \\"TSQuery match\\", \\"3870399096\\"],
      [2, 0, 11, \\"TSQuery match\\", \\"3870399096\\"]
    ]
  }\`
};"
`;

exports[`betterer should work when a test gets better 1`] = `
Array [
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"should shrink\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"should shrink\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "running \\"should grow\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"should grow\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "2 tests got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "2 tests got checked for the first time! 🎉",
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"should shrink\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"should shrink\\" got better! 😍",
  " ☀️  betterer  info  💬  - ",
  "running \\"should grow\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"should grow\\" got better! 😍",
  " ☀️  betterer  info  💬  - ",
  "2 tests got checked. 🤔",
  " ☀️  betterer  succ  ✅  - ",
  "2 tests got better! 😍",
]
`;

exports[`betterer should work when a test gets better 2`] = `
"// BETTERER RESULTS V1.
exports[\`should shrink\`] = {
  timestamp: 0,
  value: \`1\`
};
exports[\`should grow\`] = {
  timestamp: 0,
  value: \`1\`
};"
`;
